--- a/src/index.template.html
+++ b/src/index.template.html
@@ -10,11 +10,40 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono">
 
 	<link rel='icon' type='image/png' href='favicon.ico'>
+
+	<script> 
+		// generate with npx browserslist-useragent-regexp --ignorePatch --ignoreMinor --allowHigherVersions
+		if (navigator.userAgent.match(/((CPU[ +]OS|iPhone[ +]OS|CPU[ +]iPhone|CPU IPhone OS)[ +]+(12|(1[3-9]|[2-9]\d|\d{3,})|14|(1[5-9]|[2-9]\d|\d{3,})|15|(1[6-9]|[2-9]\d|\d{3,}))[_.]\d+(?:[_.]\d+)?)|(Opera\/.+Opera Mobi.+Version\/(64|(6[5-9]|[7-9]\d|\d{3,}))\.\d+)|(Opera\/(64|(6[5-9]|[7-9]\d|\d{3,}))\.\d+.+Opera Mobi)|(Opera Mobi.+Opera(?:\/|\s+)(64|(6[5-9]|[7-9]\d|\d{3,}))\.\d+)|(Edge\/(97|(9[8-9]|\d{3,}))(?:\.\d+)?)|((Chromium|Chrome)\/(96|(9[7-9]|\d{3,}))\.\d+(?:\.\d+)?)|(Version\/(14|(1[5-9]|[2-9]\d|\d{3,})|15|(1[6-9]|[2-9]\d|\d{3,}))\.\d+(?:\.\d+)? Safari\/)|(Firefox\/(78|(79|[8-9]\d|\d{3,})|91|(9[2-9]|\d{3,})|96|(9[7-9]|\d{3,}))\.\d+\.\d+)|(Firefox\/(78|(79|[8-9]\d|\d{3,})|91|(9[2-9]|\d{3,})|96|(9[7-9]|\d{3,}))\.\d+(pre|[ab]\d+[a-z]*)?)/) === null) {
+			var $buoop = {
+				required: {
+					e: -1, f: -1, o: -1, s: -1, c: -1,
+				},
+				insecure: true,
+				unsupported: true,
+				reminder: 0,
+				reminderClosed: 150,
+				no_permanent_hide: true,
+				api: 2022.03,
+			}; 
+			function $buo_f(){ 
+				var e = document.createElement("script"); 
+				e.src = "bu.js"; 
+				document.body.appendChild(e);
+				document.getElementById('nwoun_outdated').style.display = 'block';
+			};
+			try {document.addEventListener("DOMContentLoaded", $buo_f,false)}
+			catch(e){window.attachEvent("onload", $buo_f)}
+		}
+	</script>
 </head>
 
 <body>
 	<noscript>
 		<strong>We're sorry but this side doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
 	</noscript>
+	<div id="nwoun_outdated" style="display: none; max-width:500px; margin: 0 auto;">
+		<img src="/logo-uncensored-1000.png" width="500" alt="Uncensored Logo" />
+		<p style="text-align: center;">In case you're seeing this there's a decent chance your browser might not be able to properly run this site. Please consider updating or using a different browser.</p>
+	</div>
 </body>
 </html>
