too many changes :x supper page - seo stuff - minor fixes

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -4,6 +4,18 @@
 	<meta charset='utf8'>
     <meta name='viewport' content='width=device-width'>
     <title><%= htmlWebpackPlugin.options.title %></title>
+	<meta name="description" content="Neverwinter Gond Tools is a news aggregator and collection of online tools for the award-winning, officially-licensed Dungeons & Dragons free-to-play MMORPG Neverwinter by Cryptic Studios and Gearbox Entertainment. It is home to the inofficial devtracker and auction house data. More to come...">
+	<meta name="keywords" content="Neverwinter, MMORPG, D&D, Dungeons & Dragons, Cryptic Studios, Gearbox, Online Game" />
+	<meta property="og:title" content="Neverwinter Gond Tools: News aggregator and online tool collection for the Neverwinter MMORPG" />
+	<meta property="og:image" content="<%= htmlWebpackPlugin.options.baseUrl %>/logo.png" />
+	<meta property="og:type" content="website" />
+	<meta property="og:site_name" content="Neverwinter Gond Tools" />
+	<meta property="og:description" content="Neverwinter Gond Tools is a news aggregator and collection of online tools for the award-winning, officially-licensed Dungeons & Dragons free-to-play MMORPG Neverwinter by Cryptic Studios and Gearbox Entertainment. It is home to the inofficial devtracker and auction house data. More to come..." />
+	<meta name="twitter:card" content="summary_large_image" />
+	<meta name="twitter:title" content="Neverwinter Gond Tools: News aggregator and online tool collection for the Neverwinter MMORPG" />
+	<meta name="twitter:description" content="Neverwinter Gond Tools is a news aggregator and collection of online tools for the award-winning, officially-licensed Dungeons & Dragons free-to-play MMORPG Neverwinter by Cryptic Studios and Gearbox Entertainment. It is home to the inofficial devtracker and auction house data. More to come..." />
+	<meta name="twitter:image" content="<%= htmlWebpackPlugin.options.baseUrl %>/logo.png" />
+	<meta name="twitter:site" content="@NWO_ArcTracker" />
 
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700">
