--- a/index.html
+++ b/index.html
@@ -1,61 +1,131 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-	<meta charset='utf8'>
-    <meta name='viewport' content='width=device-width'>
-    <title>Neverwinter Gond Tools</title>
-	<meta name="description" content="Neverwinter Gond Tools is a news aggregator and collection of online tools for the award-winning, officially-licensed Dungeons & Dragons free-to-play MMORPG Neverwinter by Cryptic Studios and Gearbox Entertainment. It is home to the inofficial devtracker and auction house data. More to come...">
-	<meta name="keywords" content="Neverwinter, MMORPG, D&D, Dungeons & Dragons, Cryptic Studios, Gearbox, Online Game" />
-	<meta property="og:title" content="Neverwinter Gond Tools: News aggregator and online tool collection for the Neverwinter MMORPG" />
-	<meta property="og:image" content="<%= htmlWebpackPlugin.options.baseUrl %>/logo.png" />
-	<meta property="og:type" content="website" />
-	<meta property="og:site_name" content="Neverwinter Gond Tools" />
-	<meta property="og:description" content="Neverwinter Gond Tools is a news aggregator and collection of online tools for the award-winning, officially-licensed Dungeons & Dragons free-to-play MMORPG Neverwinter by Cryptic Studios and Gearbox Entertainment. It is home to the inofficial devtracker and auction house data. More to come..." />
-	<meta name="twitter:card" content="summary_large_image" />
-	<meta name="twitter:title" content="Neverwinter Gond Tools: News aggregator and online tool collection for the Neverwinter MMORPG" />
-	<meta name="twitter:description" content="Neverwinter Gond Tools is a news aggregator and collection of online tools for the award-winning, officially-licensed Dungeons & Dragons free-to-play MMORPG Neverwinter by Cryptic Studios and Gearbox Entertainment. It is home to the inofficial devtracker and auction house data. More to come..." />
-	<meta name="twitter:image" content="<%= htmlWebpackPlugin.options.baseUrl %>/logo.png" />
-	<meta name="twitter:site" content="@NWO_ArcTracker" />
+    <head>
+        <meta charset="utf8" />
+        <meta name="viewport" content="width=device-width" />
+        <title>Neverwinter Gond Tools</title>
+        <meta
+            name="description"
+            content="Neverwinter Gond Tools is a news aggregator and collection of online tools for the award-winning, officially-licensed Dungeons & Dragons free-to-play MMORPG Neverwinter by Cryptic Studios and Gearbox Entertainment. It is home to the inofficial devtracker and auction house data. More to come..."
+        />
+        <meta
+            name="keywords"
+            content="Neverwinter, MMORPG, D&D, Dungeons & Dragons, Cryptic Studios, Gearbox, Online Game"
+        />
+        <meta
+            property="og:title"
+            content="Neverwinter Gond Tools: News aggregator and online tool collection for the Neverwinter MMORPG"
+        />
+        <meta property="og:image" content="logo.png" />
+        <meta property="og:type" content="website" />
+        <meta property="og:site_name" content="Neverwinter Gond Tools" />
+        <meta
+            property="og:description"
+            content="Neverwinter Gond Tools is a news aggregator and collection of online tools for the award-winning, officially-licensed Dungeons & Dragons free-to-play MMORPG Neverwinter by Cryptic Studios and Gearbox Entertainment. It is home to the inofficial devtracker and auction house data. More to come..."
+        />
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta
+            name="twitter:title"
+            content="Neverwinter Gond Tools: News aggregator and online tool collection for the Neverwinter MMORPG"
+        />
+        <meta
+            name="twitter:description"
+            content="Neverwinter Gond Tools is a news aggregator and collection of online tools for the award-winning, officially-licensed Dungeons & Dragons free-to-play MMORPG Neverwinter by Cryptic Studios and Gearbox Entertainment. It is home to the inofficial devtracker and auction house data. More to come..."
+        />
+        <meta name="twitter:image" content="logo.png" />
+        <meta name="twitter:site" content="@NWO_ArcTracker" />
 
-	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono">
+        <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/icon?family=Material+Icons"
+        />
+        <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700"
+        />
+        <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css?family=Roboto+Mono"
+        />
 
-	<link rel='icon' type='image/png' href='favicon-unbranded.png'>
+        <link rel="icon" type="image/png" href="favicon-unbranded.png" />
+    </head>
 
-	<script> 
-		// generate with npx browserslist-useragent-regexp --ignorePatch --ignoreMinor --allowHigherVersions
-		if (navigator.userAgent.match(/((CPU[ +]OS|iPhone[ +]OS|CPU[ +]iPhone|CPU IPhone OS)[ +]+(12|(1[3-9]|[2-9]\d|\d{3,})|14|(1[5-9]|[2-9]\d|\d{3,})|15|(1[6-9]|[2-9]\d|\d{3,}))[_.]\d+(?:[_.]\d+)?)|(Opera\/.+Opera Mobi.+Version\/(64|(6[5-9]|[7-9]\d|\d{3,}))\.\d+)|(Opera\/(64|(6[5-9]|[7-9]\d|\d{3,}))\.\d+.+Opera Mobi)|(Opera Mobi.+Opera(?:\/|\s+)(64|(6[5-9]|[7-9]\d|\d{3,}))\.\d+)|(Edge\/(97|(9[8-9]|\d{3,}))(?:\.\d+)?)|((Chromium|Chrome)\/(96|(9[7-9]|\d{3,}))\.\d+(?:\.\d+)?)|(Version\/(14|(1[5-9]|[2-9]\d|\d{3,})|15|(1[6-9]|[2-9]\d|\d{3,}))\.\d+(?:\.\d+)? Safari\/)|(Firefox\/(78|(79|[8-9]\d|\d{3,})|91|(9[2-9]|\d{3,})|96|(9[7-9]|\d{3,}))\.\d+\.\d+)|(Firefox\/(78|(79|[8-9]\d|\d{3,})|91|(9[2-9]|\d{3,})|96|(9[7-9]|\d{3,}))\.\d+(pre|[ab]\d+[a-z]*)?)/) === null) {
-			var $buoop = {
-				required: {
-					e: -1, f: -1, o: -1, s: -1, c: -1,
-				},
-				insecure: true,
-				unsupported: true,
-				reminder: 0,
-				reminderClosed: 150,
-				no_permanent_hide: true,
-				api: 2022.03,
-			}; 
-			function $buo_f(){ 
-				var e = document.createElement("script"); 
-				e.src = "bu.js"; 
-				document.body.appendChild(e);
-				document.getElementById('nwoun_outdated').style.display = 'block';
-			};
-			try {document.addEventListener("DOMContentLoaded", $buo_f,false)}
-			catch(e){window.attachEvent("onload", $buo_f)}
-		}
-	</script>
-</head>
-
-<body>
-	<noscript>
-		<strong>We're sorry but this side doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-	</noscript>
-	<div id="nwoun_outdated" style="display: none; max-width:500px; margin: 0 auto;">
-		<p style="text-align: center;">In case you're seeing this there's a decent chance your browser might not be able to properly run this site. Please consider updating or using a different browser.</p>
-	</div>
-    <script type="module" src="/src/main.js"></script>
-</body>
+    <body>
+        <noscript>
+            <strong
+                >We're sorry but this side doesn't work properly without
+                JavaScript enabled. Please enable it to continue.</strong
+            >
+        </noscript>
+        <div
+            id="nwoun_outdated"
+            style="display: none; max-width: 500px; margin: 0 auto"
+        >
+            <p style="text-align: center">
+                In case you're seeing this there's a decent chance your browser
+                might not be able to properly run this site. Please consider
+                updating or using a different browser.
+            </p>
+        </div>
+        <script type="module" src="/src/main.js"></script>
+        <script nomodule>
+            var $buoop = {
+                required: {
+                    e: -1,
+                    f: -1,
+                    o: -1,
+                    s: -1,
+                    c: -1,
+                },
+                insecure: true,
+                unsupported: true,
+                reminder: 0,
+                reminderClosed: 150,
+                no_permanent_hide: true,
+                api: 2022.03,
+            };
+            function $buo_f() {
+                var e = document.createElement("script");
+                e.src = "bu.js";
+                document.body.appendChild(e);
+                document.getElementById("nwoun_outdated").style.display =
+                    "block";
+            }
+            try {
+                document.addEventListener("DOMContentLoaded", $buo_f, false);
+            } catch (e) {
+                window.attachEvent("onload", $buo_f);
+            }
+        </script>
+        <!-- Matomo -->
+        <script>
+            var _paq = (window._paq = window._paq || []);
+            /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+            _paq.push(["setCookieDomain", "*.gond.tools"]);
+            _paq.push(["disableCookies"]);
+            _paq.push(["trackPageView"]);
+            _paq.push(["enableLinkTracking"]);
+            (function () {
+                var u = "//matomo.uncnso.red/";
+                _paq.push(["setTrackerUrl", u + "matomo.php"]);
+                _paq.push(["setSiteId", "2"]);
+                var d = document,
+                    g = d.createElement("script"),
+                    s = d.getElementsByTagName("script")[0];
+                g.async = true;
+                g.src = u + "matomo.js";
+                s.parentNode.insertBefore(g, s);
+            })();
+        </script>
+        <noscript
+            ><p>
+                <img
+                    src="//matomo.uncnso.red/matomo.php?idsite=2&amp;rec=1"
+                    style="border: 0"
+                    alt=""
+                /></p
+        ></noscript>
+        <!-- End Matomo Code -->
+    </body>
 </html>
